--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+/* Fonts */
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-Thin.ttf);
+  font-style: normal;
+  font-weight: 100;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-ExtraLight.ttf);
+  font-style: normal;
+  font-weight: 200;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-Light.ttf);
+  font-style: normal;
+  font-weight: 300;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-Regular.ttf);
+  font-style: normal;
+  font-weight: 400;
 }
 
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-Medium.ttf);
+  font-style: normal;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-SemiBold.ttf);
+  font-style: normal;
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-Bold.ttf);
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-ExtraBold.ttf);
+  font-style: normal;
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: inter;
+  src: url(./assets/fonts/Inter-Black.ttf);
+  font-style: normal;
+  font-weight: 900;
+}
+
+
+body {
+  margin: 0;
+  font-family: 'inter';
+  font-weight: 500;
+  font-size: 1.2rem;
+  background-color: #F7F9FA;
+  color: #000000
 }
